# OmniAvatar

./: .gitignore  README.md  history.txt  paper.txt  pyproject.toml  requirements.txt
OmniAvatar/models/: wan_video_dit.py
configs/: inference.yaml  train_lora.yaml
scripts/: get_data.sh  inference.py  modal_train.py  prepare_mov_dataset.py  train_lora.py
